<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_toggle_debug_info"
          android:title="@string/menu_show_logging_info"
          app:showAsAction="ifRoom"
        />
    <item android:id="@+id/menu_sign_out"
          android:title="@string/menu_sign_out"
          app:showAsAction="never"
        />
    <item android:id="@+id/menu_about"
          android:title="@string/menu_about"
          app:showAsAction="never"
        />
    <item android:id="@+id/menu_change_robot"
          android:title="@string/menu_change_robot"
          app:showAsAction="never"
        />
    <item android:id="@+id/menu_clear_active_goals"
          android:title="@string/menu_clear_active_goals"
          app:showAsAction="never"
        />
    <item android:id="@+id/menu_toggle_robot_position"
          android:title="@string/menu_robot_position"
          android:checkable="true"
          android:checked="false"
          app:showAsAction="never"
        />
    <item android:id="@+id/menu_toggle_original_path"
          android:title="@string/menu_original_path"
          android:checkable="true"
          android:checked="false"
          app:showAsAction="never"
        />
    <item android:id="@+id/menu_toggle_smoothed_path"
          android:title="@string/menu_smoothed_path"
          android:checkable="true"
          android:checked="false"
          app:showAsAction="never"
        />
    <item android:id="@+id/menu_toggle_custom_path"
          android:title="@string/menu_custom_path"
          android:checkable="true"
          android:checked="false"
          app:showAsAction="never"
        />
    <item android:id="@+id/menu_toggle_poi"
          android:title="@string/menu_points_of_interest"
          android:checkable="true"
          android:checked="false"
          app:showAsAction="never"
        />

</menu>