<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/spacing_xs"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
    >

    <TextView
        android:id="@+id/add_poi_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_s"
        android:gravity="center"
        android:text="@string/add_a_new_poi"
        android:textStyle="bold"
        />

    <com.github.zagum.speechrecognitionview.RecognitionProgressView
        android:id="@+id/voice_recognition_progress_view"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_below="@id/add_poi_title_label"
        android:layout_marginTop="@dimen/spacing_m"
        android:layout_marginBottom="@dimen/spacing_m"
        android:layout_centerHorizontal="true"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/poi_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/voice_recognition_progress_view"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="80dp"
        android:gravity="center"
        >

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_poi"
            android:inputType="textMultiLine"
            android:maxLines="2"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/voice_fab"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginRight="@dimen/spacing_m"
        android:layout_alignTop="@+id/poi_name_container"
        android:layout_alignParentEnd="true"
        app:fabSize="normal"
        android:src="@drawable/ic_mic"
        />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/poi_name_container"
        android:layout_centerInParent="true"
        android:text="@string/confirm"
        />

</RelativeLayout>